--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -277,7 +277,7 @@ Full-Width Styles
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
+  background: url('../images/blacktocat.png') #24498c no-repeat 95% 50%;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 2px;
@@ -285,12 +285,12 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background: #55ae2b;
+  background: -moz-linear-gradient(top, #55ae2b, #4a8b2c);
+  background: -webkit-linear-gradient(top, #55ae2b, #4a8b2c);
+  background: -ms-linear-gradient(top, #55ae2b, #4a8b2c);
+  background: -o-linear-gradient(top, #55ae2b, #4a8b2c);
+  background: linear-gradient(top, #55ae2b, #4a8b2c);
 }
 
 #header_wrap .inner {
@@ -363,7 +363,7 @@ Full-Width Styles
 }
 
 #footer_wrap {
-  background: #212121;
+  background: #4c9d2f;
 }
 
 
