--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,20 @@
 <div id="header_wrap" class="outer">
-  <header class="inner">
-    <a id="forkme_banner" href="https://github.com/WebDAVSharp">View on GitHub</a>
-    <img id="project_logo" src="{{ site.url }}/img/WebDAVSharpLogo-small.png" alt="WebDAVSharp logo">
-    <h1 id="project_title">
-        <a href="{{ site.url }}">WebDAVSharp</a>
-    </h1>
-    <h2 id="project_tagline">WebDAV server in C#</h2>
-    <nav class="mobile-nav show-on-mobiles">
-      {% include primary-nav-items.html %}
-    </nav>
-    <div class="grid">
-  	  <nav class="main-nav hide-on-mobiles">
-        {% include primary-nav-items.html %}
-      </nav>
-    </div>
-  </header>
+    <header class="inner">
+        <a id="forkme_banner" href="https://github.com/WebDAVSharp">View on GitHub</a>
+        <a id="project_logo"></a>
+
+        <h1 id="project_title">
+            <a href="{{ site.url }}">WebDAV#</a>
+        </h1>
+
+        <h2 id="project_tagline">WebDAV server in C#</h2>
+        <nav class="mobile-nav show-on-mobiles">
+            {% include primary-nav-items.html %}
+        </nav>
+        <div class="grid">
+            <nav class="main-nav hide-on-mobiles">
+                {% include primary-nav-items.html %}
+            </nav>
+        </div>
+    </header>
 </div>
