--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="header_wrap" class="outer">
     <header class="inner">
         <a id="forkme_banner" href="https://github.com/WebDAVSharp">View on GitHub</a>
-        <a id="project_logo"></a>
+        <a id="project_logo" href="{{ site.url }}"></a>
 
         <h1 id="project_title">
             <a href="{{ site.url }}">WebDAV#</a>
