Setup desktop version added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div id="header_wrap" class="outer">
     <header class="inner">
         <a id="forkme_banner" href="https://github.com/WebDAVSharp">View on GitHub</a>
-        <a id="project_logo" href="{{ site.url }}"></a>
+        <a id="project_logo" href="{{ site.url }}/"></a>
 
         <h1 id="project_title">
-            <a href="{{ site.url }}">WebDAV#</a>
+            <a href="{{ site.url }}/">WebDAV#</a>
         </h1>
 
         <h2 id="project_tagline">WebDAV server in C#</h2>
