--- a/_includes/docs_contents.html
+++ b/_includes/docs_contents.html
@@ -1,9 +1,15 @@
 <div class="unit one-fifth hide-on-mobiles">
     <aside>
-        {% include docs_ul.html items='home' %}
-        <h4>Getting the basics</h4>
-        {% include docs_ul.html items='configure icons schemas' %}
-        <h4>Advanced Topics</h4>
-        {% include docs_ul.html items='tree projectmanager dfmanager' %}
+        {% for item in items %}
+        <!--{% assign header = item | split: ':' %}-->
+        <!--<h6>{{ header[0] }}</h6>-->
+        <p>{{ item }}</p>
+        {% endfor %}
+
+        <!--{% include docs_ul.html items='home' %}-->
+        <h4>Server</h4>
+        {% include docs_ul.html items='setup-server' %}
+        <h4>Client</h4>
+        {% include docs_ul.html items='setup-carotdav setup-windowsexplorer' %}
     </aside>
 </div>
