--- a/_includes/docs_ul.html
+++ b/_includes/docs_ul.html
@@ -2,19 +2,24 @@
 
 <ul>
     {% for item in items %}
-    {% assign item_url = item | prepend:'/customize/' | append:'/' %}
-
-    {% if item_url == page.url %}
-    {% assign c = 'current' %}
-    {% else %}
-    {% assign c = '' %}
-    {% endif %}
-
-    {% for p in site.pages %}
-    {% if p.url == item_url %}
-    <li class="{{ c }}"><a href="{{ site.url }}{{ p.url }}">{{ p.title }}</a></li>
-    {% endif %}
+    {% assign item_url = item | prepend:'/setup/' | append:'/' %}
+    <li><a href="{{ site.url }}{{item_url}}">{{ item }}</a></li>
     {% endfor %}
 
-    {% endfor %}
+    <!--{% for item in items %}-->
+    <!--{% assign item_url = item | prepend:'/customize/' | append:'/' %}-->
+
+    <!--{% if item_url == page.url %}-->
+    <!--{% assign c = 'current' %}-->
+    <!--{% else %}-->
+    <!--{% assign c = '' %}-->
+    <!--{% endif %}-->
+
+    <!--{% for p in site.pages %}-->
+    <!--{% if p.url == item_url %}-->
+    <!--<li class="{{ c }}"><a href="{{ site.url }}{{ p.url }}">{{ p.title }}</a></li>-->
+    <!--{% endif %}-->
+    <!--{% endfor %}-->
+
+    <!--{% endfor %}-->
 </ul>
