--- a/_includes/setup_contents_mobile.html
+++ b/_includes/setup_contents_mobile.html
@@ -2,10 +2,10 @@
     <select onchange="if (this.value) window.location.href=this.value">
         <option value="">Choose…</option>
         <optgroup label="Server">
-            <!--{% include docs_option.html items='configure icons schemas' %}-->
+            {% include docs_option.html items='configure icons schemas' %}
         </optgroup>
         <optgroup label="Client">
-            <!--{% include docs_option.html items='tree projectmanager dfmanager' %}-->
+            {% include docs_option.html items='tree projectmanager dfmanager' %}
         </optgroup>
     </select>
 </div>
