Bug setup fixed

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -3,6 +3,6 @@
         <a href="{{ site.url }}/">Home</a>
     </li>
     <li class="{% if page.url contains '/setup/' ' %}current{% endif %}">
-        <a href="{{ site.url }}/setup/home">Setup</a>
+        <a href="{{ site.url }}/setup/">Setup</a>
     </li>
 </ul>
