Tagline not shown on mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
             <a href="{{ site.url }}/">WebDAV#</a>
         </h1>
 
-        <h2 id="project_tagline">WebDAV server in C#</h2>
+        <h2 id="project_tagline" class="hide-on-mobiles">WebDAV server in C#</h2>
         <nav class="mobile-nav show-on-mobiles">
             {% include primary-nav-items.html %}
         </nav>
