--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -5,7 +5,10 @@
     <li class="{% if page.url contains '/setup/' ' %}current{% endif %}">
         <a href="{{ site.url }}/setup/">Setup</a>
     </li>
+    <li class="{% if page.url contains '/classdiagram/' ' %}current{% endif %}">
+        <a href="{{ site.url }}/classdiagram/">Diagram</a>
+    </li>
     <li class="{% if page.url contains '/docs/' ' %}current{% endif %}">
-        <a href="{{ site.url }}/docs/">Documentation</a>
+        <a href="{{ site.url }}/docs/">Docs</a>
     </li>
 </ul>
