Diagram and docs open in new tags

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -6,9 +6,9 @@
         <a href="{{ site.url }}/setup/">Setup</a>
     </li>
     <li class="{% if page.url contains '/classdiagram/' ' %}current{% endif %}">
-        <a href="{{ site.url }}/classdiagram/">Diagram</a>
+        <a href="{{ site.url }}/classdiagram/" target="_blank">Diagram</a>
     </li>
     <li class="{% if page.url contains '/docs/' ' %}current{% endif %}">
-        <a href="{{ site.url }}/docs/">Docs</a>
+        <a href="{{ site.url }}/docs/" target="_blank".>Docs</a>
     </li>
 </ul>
