--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -2,6 +2,9 @@
     <li class="{% if page.home %}current{% endif %}">
         <a href="{{ site.url }}/">Home</a>
     </li>
+    <li class="{% if page.url contains '/info/' ' %}current{% endif %}">
+        <a href="{{ site.url }}/info/">Info</a>
+    </li>
     <li class="{% if page.url contains '/setup/' ' %}current{% endif %}">
         <a href="{{ site.url }}/setup/">Setup</a>
     </li>
