--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -5,7 +5,7 @@ layout: default
 <section class="docs">
     <div class="grid">
 
-        {% include setup_contents_mobile.html %}
+        {% include info_contents_mobile.html %}
 
         <div class="unit four-fifths">
             <article>
@@ -15,7 +15,7 @@ layout: default
             </article>
         </div>
 
-        {% include setup_contents.html%}
+        {% include info_contents.html%}
 
         <div class="clear"></div>
 
