--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ body > header, body > section, body > footer {
 
 #header_wrap {
     background: none;
+    z-index: 10;
     /*box-shadow: 0 1px 5px rgba(0, 0, 0, .1);*/
 }
 
@@ -1299,4 +1300,6 @@ html[xmlns] .clearfix {
 div#map {
     width: 100%;
     height: 512px;
+    z-index: 5;
+    overflow: hidden;
 }
