Info Exceptions added

--- a/_includes/info_contents.html
+++ b/_includes/info_contents.html
@@ -1,6 +1,6 @@
 <div class="unit one-fifth hide-on-mobiles">
     <aside>
         {% include info_ul.html items='index' %}
-        {% include info_ul.html items='info-authentication info-statuscodes' %}
+        {% include info_ul.html items='info-authentication info-statuscodes info-exceptions' %}
     </aside>
 </div>
