--- a/_includes/top.html
+++ b/_includes/top.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>WebDAV# {{ page.title }}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ site.url }}/img/favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic'
           rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
