Info Method handlers added

--- a/_includes/info_contents_mobile.html
+++ b/_includes/info_contents_mobile.html
@@ -2,7 +2,7 @@
     <select onchange="if (this.value) window.location.href=this.value">
         <option value="">Choose…</option>
         <optgroup label="Info">
-            {% include info_option.html items='info-httplistener info-authentication info-exceptions info-statuscodes info-response' %}
+            {% include info_option.html items='info-httplistener info-methodhandlers info-authentication info-exceptions info-statuscodes info-response' %}
         </optgroup>
     </select>
 </div>
