Image on the home page has been changed

--- a/css/style.css
+++ b/css/style.css
@@ -1078,7 +1078,7 @@ code.option, code.flag, code.filter, code.output {
 }
 
 .big-banner div.drawing {
-    background-image: url("../img/home-intro.png") ;
+    background-image: url("../img/home-intro-2.png") ;
     display: block;
     background-size: 100%;
     background-repeat: no-repeat;
