--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 <footer>
     <div class="grid">
         <div class="unit one-third center-on-mobiles">
-            <p>Maintained by <a href="http://www.xploreplus.com">xplore+</a>.</p>
+            <p>Maintained by <a href="http://www.xploreplus.com">Xplore+</a>.</p>
         </div>
         <div class="align-right center-on-mobiles">
             <p>
